docs/en/6.0/api/webview.md
#WebView
<div class="btn-group"><a href="#Methods" class="btn btn-outline-secondary">Methods<span class="badge badge-secondary ml-3">11</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><h6 class="dropdown-header">Methods - Class</h6>
<a href="#mactive_tab" data-target="cMethodactive_tab" class="dropdown-item"><span class='text-error'>active_tab</span></a><a href="#mcurrentLocation" data-target="cMethodcurrentLocation" class="dropdown-item">currentLocation</a><a href="#mcurrentURL" data-target="cMethodcurrentURL" class="dropdown-item"><span class='text-info'>currentURL</span></a><a href="#mexecuteJavascript" data-target="cMethodexecuteJavascript" class="dropdown-item"><span class='text-info'>executeJavascript</span></a><a href="#mfull_screen_mode" data-target="cMethodfull_screen_mode" class="dropdown-item"><span class='text-error'>full_screen_mode</span></a><a href="#mnavigate" data-target="cMethodnavigate" class="dropdown-item">navigate</a><a href="#mnavigateBack" data-target="cMethodnavigateBack" class="dropdown-item">navigateBack</a><a href="#mrefresh" data-target="cMethodrefresh" class="dropdown-item">refresh</a><a href="#msave" data-target="cMethodsave" class="dropdown-item">save</a><a href="#msetCookie" data-target="cMethodsetCookie" class="dropdown-item">setCookie</a><a href="#mset_menu_items" data-target="cMethodset_menu_items" class="dropdown-item"><span class='text-error'>set_menu_items</span></a></div></div><div class="btn-group"><a href="#Properties" class="btn btn-outline-secondary">Properties<span class="badge badge-secondary ml-3">16</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><h6 class="dropdown-header">Class Properties</h6>
<a href="#pactiveTab" data-target="cPropertyactiveTab" class="dropdown-item">activeTab</a><a href="#pcacheSize" data-target="cPropertycacheSize" class="dropdown-item">cacheSize</a><a href="#penableCache" data-target="cPropertyenableCache" class="dropdown-item">enableCache</a><a href="#penablePageLoadingIndication" data-target="cPropertyenablePageLoadingIndication" class="dropdown-item">enablePageLoadingIndication</a><a href="#penableWebPlugins" data-target="cPropertyenableWebPlugins" class="dropdown-item">enableWebPlugins</a><a href="#penableZoom" data-target="cPropertyenableZoom" class="dropdown-item">enableZoom</a><a href="#pfontFamily" data-target="cPropertyfontFamily" class="dropdown-item">fontFamily</a><a href="#pframework" data-target="cPropertyframework" class="dropdown-item">framework</a><a href="#pfullScreen" data-target="cPropertyfullScreen" class="dropdown-item">fullScreen</a><a href="#pnavigationTimeout" data-target="cPropertynavigationTimeout" class="dropdown-item">navigationTimeout</a><a href="#pscrollTechnique" data-target="cPropertyscrollTechnique" class="dropdown-item">scrollTechnique</a><a href="#ptextZoomLevel" data-target="cPropertytextZoomLevel" class="dropdown-item">textZoomLevel</a><a href="#puserAgent" data-target="cPropertyuserAgent" class="dropdown-item">userAgent</a><a href="#pviewportEnabled" data-target="cPropertyviewportEnabled" class="dropdown-item">viewportEnabled</a><a href="#pviewportWidth" data-target="cPropertyviewportWidth" class="dropdown-item">viewportWidth</a><a href="#pzoomPage" data-target="cPropertyzoomPage" class="dropdown-item">zoomPage</a></div></div><div class="btn-group"><a href="#Examples" class="btn btn-outline-secondary">Examples<span class="badge badge-secondary ml-3">5</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><a href="#e0" data-target="eExample0" class="dropdown-item">Execute javascript</a><a href="#e1" data-target="eExample1" class="dropdown-item">Use full-screen mode</a><a href="#e2" data-target="eExample2" class="dropdown-item">Navigate</a><a href="#e3" data-target="eExample3" class="dropdown-item">Navigate back</a><a href="#e4" data-target="eExample4" class="dropdown-item">Refresh the page</a></div></div><div id="apibody" class="mt-3">
<p>The <code>Webview</code> is the core container used for rendering your application code. You can control certain behaviors of the webview by using this API class.</p>
<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2>Methods</h2>

<div class="accordion" id="accordion"><a name ='mactive_tab'/><div class=' method  js ruby android ios wp8' id='mactive_tab'><div class="signature d-flex"><div class="name"><span class="text-error">active_tab</span></div><div class='parameters'>()</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mactive_tab1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mactive_tab4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mactive_tab6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-active_tab'><div class="tab-pane fade active show" id="mactive_tab1"><span class='badge badge-danger'>Deprecated</span> <p>Use NativeTabbar.currentTab property: returns the current tab index.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mactive_tab2"></div><div class="tab-pane fade" id="mactive_tab3"></div><div class="tab-pane fade" id="mactive_tab4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER</li></ul></div></div><div class="tab-pane fade" id="mactive_tab6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.active_tab()</code> </li><li>Ruby: <code>Rho::WebView.active_tab()</code></li></ul></li></ul></div></div></div>  </div><a name ='mcurrentLocation'/><div class=' method  ruby android ios wp8' id='mcurrentLocation'><div class="signature d-flex"><div class="name">currentLocation</div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mcurrentLocation1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentLocation2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentLocation4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentLocation6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-currentLocation'><div class="tab-pane fade active show" id="mcurrentLocation1"><p>Returns the relative url (location) of the current page(without server and port); the last URL loaded to WebView from Ruby controller action.</p>

<p>If you open your page in WebView, and after it makes a few jumps by linking (for example, to outside web adresses for example), currentLocation will still return the initial url opened in WebView. Also, if you use JQMobile, current_location has the initial URL, but does not reflect the actual window.location containing the JQMobile additional address by adding #, etc. See currentUrl.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcurrentLocation2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.Tab should be loaded once to return current url.</p>
 <p>Current location of active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mcurrentLocation3"></div><div class="tab-pane fade" id="mcurrentLocation4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mcurrentLocation6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.currentLocation(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mcurrentURL'/><div class=' method  ruby android ios' id='mcurrentURL'><div class="signature d-flex"><div class="name"><span class="text-info">currentURL</span></div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mcurrentURL1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentURL2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentURL4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mcurrentURL6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-currentURL'><div class="tab-pane fade active show" id="mcurrentURL1"><span class='badge badge-info'>Replaces:</span> <span class='badge badge-info'>get_current_url</span>  <p>Returns the actual URL in WebView. This works the same as the JavaScript window.location.href.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"></p></div></p></div><div class="tab-pane fade" id="mcurrentURL2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Current url of active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mcurrentURL3"></div><div class="tab-pane fade" id="mcurrentURL4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mcurrentURL6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.currentURL(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mexecuteJavascript'/><div class=' method  ruby android ios wp8' id='mexecuteJavascript'><div class="signature d-flex"><div class="name"><span class="text-info">executeJavascript</span></div><div class='parameters'>(<span class="text-info">STRING</span> javascriptText, <span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mexecuteJavascript1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mexecuteJavascript2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mexecuteJavascript4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mexecuteJavascript6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-executeJavascript'><div class="tab-pane fade active show" id="mexecuteJavascript1"><span class='badge badge-info'>Replaces:</span> <span class='badge badge-info'>execute_js</span> <span class='badge badge-info'>executeJavaScript</span>  <p>Execute JavaScript on the current page from your controller.</p>

<p>For most mobile platforms, WebView.execute_js has been implemented via redirection to URL with &lsquo;javascript:&rsquo; schema. If WebView.execute_js used in an AJAX call handler method in the controller, it may lead to the situation where the success javascript handler will never be executed. This may happen because, at the moment of success handler should be executed, a URL of the page already has been changed. This means no handlers from the previous page are valid.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mexecuteJavascript2"><div><p><strong>Parameters</strong></p><ul><li>javascriptText : <span class='text-info'>STRING</span><p><p>The call to the JavaScript method on the current page, such as &ldquo;test();&rdquo;.</p>
 </p></li><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Execute javascript in active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mexecuteJavascript3"></div><div class="tab-pane fade" id="mexecuteJavascript4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mexecuteJavascript6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.executeJavascript(<span class="text-info">STRING</span> javascriptText, <span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mfull_screen_mode'/><div class=' method  js ruby android ios wp8' id='mfull_screen_mode'><div class="signature d-flex"><div class="name"><span class="text-error">full_screen_mode</span></div><div class='parameters'>(<span class="text-info">BOOLEAN</span> enable)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mfull_screen_mode1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mfull_screen_mode2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mfull_screen_mode4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mfull_screen_mode6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-full_screen_mode'><div class="tab-pane fade active show" id="mfull_screen_mode1"><span class='badge badge-danger'>Deprecated</span> <p>Use WebView.fullScreen property: Switch to / from full screen mode.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mfull_screen_mode2"><div><p><strong>Parameters</strong></p><ul><li>enable : <span class='text-info'>BOOLEAN</span><p> </p></li></ul></div></div><div class="tab-pane fade" id="mfull_screen_mode3"></div><div class="tab-pane fade" id="mfull_screen_mode4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mfull_screen_mode6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.full_screen_mode(<span class="text-info">BOOLEAN</span> enable)</code> </li><li>Ruby: <code>Rho::WebView.full_screen_mode(<span class="text-info">BOOLEAN</span> enable)</code></li></ul></li></ul></div></div></div>  </div><a name ='mnavigate'/><div class=' method  js ruby android ios wp8' id='mnavigate'><div class="signature d-flex"><div class="name">navigate</div><div class='parameters'>(<span class="text-info">STRING</span> url, <span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mnavigate1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mnavigate2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mnavigate4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mnavigate6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-navigate'><div class="tab-pane fade active show" id="mnavigate1"><p>Force WebView to navigate to a URL. White page flickering during transition may happen if a controller action method doesn&rsquo;t return any rendered value, but instead performs a WebView.navigate(someUrl) call. It is important to avoid using WebView.navigate in Ruby action methods because WebView.navigate is intended to be used in callback methods asynchronously.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mnavigate2"><div><p><strong>Parameters</strong></p><ul><li>url : <span class='text-info'>STRING</span><p><p>Navigate to this url.</p>
 </p></li><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored. Please avoid of navigate in not opened tab &ndash; this is unsupported on Android.</p>
 <p>Refresh active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mnavigate3"></div><div class="tab-pane fade" id="mnavigate4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mnavigate6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.navigate(<span class="text-info">STRING</span> url, <span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.navigate(<span class="text-info">STRING</span> url, <span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mnavigateBack'/><div class=' method  js ruby android ios wp8' id='mnavigateBack'><div class="signature d-flex"><div class="name">navigateBack</div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mnavigateBack1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mnavigateBack2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mnavigateBack4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mnavigateBack6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-navigateBack'><div class="tab-pane fade active show" id="mnavigateBack1"><p>Force WebView to navigate to the previous page using Browser back.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mnavigateBack2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Navigate back in active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mnavigateBack3"></div><div class="tab-pane fade" id="mnavigateBack4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mnavigateBack6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.navigateBack(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.navigateBack(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mrefresh'/><div class=' method  js ruby android ios wp8' id='mrefresh'><div class="signature d-flex"><div class="name">refresh</div><div class='parameters'>(<span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mrefresh1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mrefresh2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mrefresh4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mrefresh6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-refresh'><div class="tab-pane fade active show" id="mrefresh1"><p>Force WebView to refresh the current page.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mrefresh2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Refresh active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mrefresh3"></div><div class="tab-pane fade" id="mrefresh4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mrefresh6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.refresh(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.refresh(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='msave'/><div class=' method  js ruby android' id='msave'><div class="signature d-flex"><div class="name">save</div><div class='parameters'>(<span class="text-info">STRING</span> format, <span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> tabIndex)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#msave1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#msave2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#msave4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#msave6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-save'><div class="tab-pane fade active show" id="msave1"><p>Save current page to file system.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"></p></div></p></div><div class="tab-pane fade" id="msave2"><div><p><strong>Parameters</strong></p><ul><li>format : <span class='text-info'>STRING</span><p><p>Format of the saved page.</p>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho::WebView.SAVE_FORMAT_JPEG (For Ruby use "::" for all "." when referencing constants)<br/> String:jpeg</dt><dd><p>Save as jpeg image.</p>
</dt></dl></li><li>path : <span class='text-info'>STRING</span><p><p>Path to the file / folder to save the page.</p>
 </p></li><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='badge badge-info'>Optional</span><span class='badge badge-secondary '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>If tabbar index omitted then active WebView will be saved.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="msave3"></div><div class="tab-pane fade" id="msave4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msave6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.save(<span class="text-info">STRING</span> format, <span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.save(<span class="text-info">STRING</span> format, <span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetCookie'/><div class=' method  ruby android ios' id='msetCookie'><div class="signature d-flex"><div class="name">setCookie</div><div class='parameters'>(<span class="text-info">STRING</span> url, <span class="text-info">STRING</span> cookie)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#msetCookie1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#msetCookie2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#msetCookie4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#msetCookie6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-setCookie'><div class="tab-pane fade active show" id="msetCookie1"><p>When WebView loads the specified url (either by selecting link or from calling WebView.navigate), it will add this cookie to the HTTP request.Not implemented for WebKit.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="msetCookie2"><div><p><strong>Parameters</strong></p><ul><li>url : <span class='text-info'>STRING</span><p><p>Set a cookie to be used by WebView for this url.</p>
 </p></li><li>cookie : <span class='text-info'>STRING</span><p><p>One or more name-value pairs of the format &ldquo;NAME=VALUE&rdquo;. Separate multiple name-value pairs with a semicolon, such as &ldquo;NAME1=VALUE1; NAME2=VALUE2&rdquo;.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetCookie3"></div><div class="tab-pane fade" id="msetCookie4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetCookie6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.setCookie(<span class="text-info">STRING</span> url, <span class="text-info">STRING</span> cookie)</code></li></ul></li></ul></div></div></div>  </div><a name ='mset_menu_items'/><div class=' method  js ruby android' id='mset_menu_items'><div class="signature d-flex"><div class="name"><span class="text-error">set_menu_items</span></div><div class='parameters'>(<span class="text-info">HASH</span> menuItems)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mset_menu_items1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mset_menu_items2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mset_menu_items4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mset_menu_items6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-set_menu_items'><div class="tab-pane fade active show" id="mset_menu_items1"><span class='badge badge-danger'>Deprecated</span> <p>Use Application.nativeMenu property: set native menu items.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mset_menu_items2"><div><p><strong>Parameters</strong></p><ul><li>menuItems : <span class='text-info'>HASH</span><p><p>Map of menu items: name to action.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mset_menu_items3"></div><div class="tab-pane fade" id="mset_menu_items4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mset_menu_items6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.WebView.set_menu_items(<span class="text-info">HASH</span> menuItems)</code> </li><li>Ruby: <code>Rho::WebView.set_menu_items(<span class="text-info">HASH</span> menuItems)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2>Properties</h2>

<a name='pactiveTab'></a><div class=' method  js ruby android ios wp8' id='pactiveTab'><div class="signature d-flex"><div class="name">activeTab</div><div class='return-values'> : <span class='text-info'>INTEGER</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pactiveTab1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#pactiveTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-activeTab'><div class="tab-pane fade active show" id="pactiveTab1"><p>Return an active tab index. For change active tab use Use Rho.NativeTabbar.currentTab property.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pactiveTab2"></div><div class="tab-pane fade" id="pactiveTab5"></div><div class="tab-pane fade" id="pactiveTab6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.activeTab</code></li></ul></li></ul></div></div></div>  </div><a name='pcacheSize'></a><div class=' method  js ruby' id='pcacheSize'><div class="signature d-flex"><div class="name">cacheSize</div><div class='return-values'> : <span class='text-info'>INTEGER</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pcacheSize1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#pcacheSize6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-cacheSize'><div class="tab-pane fade active show" id="pcacheSize1"><p>The browser cache size, in whole MBs. Defines in config.xml: Navigation\Cache.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pcacheSize2"></div><div class="tab-pane fade" id="pcacheSize5"></div><div class="tab-pane fade" id="pcacheSize6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.cacheSize</code></li></ul></li></ul></div></div></div>  </div><a name='penableCache'></a><div class=' method  js ruby android' id='penableCache'><div class="signature d-flex"><div class="name">enableCache</div><div class='return-values'> : <span class='text-info'>BOOLEAN</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#penableCache1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#penableCache2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#penableCache6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-enableCache'><div class="tab-pane fade active show" id="penableCache1"><p>Enable / disable Browser cache. Use &lsquo;WebView.enableCache&rsquo; parameter in rhoconfig.txt to configure this value.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="penableCache2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penableCache5"></div><div class="tab-pane fade" id="penableCache6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.enableCache</code></li></ul></li></ul></div></div></div>  </div><a name='penablePageLoadingIndication'></a><div class=' method  js ruby android' id='penablePageLoadingIndication'><div class="signature d-flex"><div class="name">enablePageLoadingIndication</div><div class='return-values'> : <span class='text-info'>BOOLEAN</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#penablePageLoadingIndication1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#penablePageLoadingIndication2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#penablePageLoadingIndication6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-enablePageLoadingIndication'><div class="tab-pane fade active show" id="penablePageLoadingIndication1"><p>Show page loading indication. On Windows Mobile/CE this property can be set only in config.xml: GUI\HourglassEnabled. At Android  use &lsquo;disable_loading_indication&rsquo; parameter in rhoconfig.txt to configure this value.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="penablePageLoadingIndication2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penablePageLoadingIndication5"></div><div class="tab-pane fade" id="penablePageLoadingIndication6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.enablePageLoadingIndication</code></li></ul></li></ul></div></div></div>  </div><a name='penableWebPlugins'></a><div class=' method  js ruby android' id='penableWebPlugins'><div class="signature d-flex"><div class="name">enableWebPlugins</div><div class='return-values'> : <span class='text-info'>BOOLEAN</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#penableWebPlugins1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#penableWebPlugins2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#penableWebPlugins6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-enableWebPlugins'><div class="tab-pane fade active show" id="penableWebPlugins1"><p>Enable / disable web plug-ins. Use &lsquo;enable_web_plugins&rsquo; parameter in rhoconfig.txt to configure this value. This option only has effect on Android versions before 4.0 (ICS). It mainly affects if Flash content is displayed.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="penableWebPlugins2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penableWebPlugins5"></div><div class="tab-pane fade" id="penableWebPlugins6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.enableWebPlugins</code></li></ul></li></ul></div></div></div>  </div><a name='penableZoom'></a><div class=' method  js ruby android' id='penableZoom'><div class="signature d-flex"><div class="name">enableZoom</div><div class='return-values'> : <span class='text-info'>BOOLEAN</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#penableZoom1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#penableZoom2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#penableZoom6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-enableZoom'><div class="tab-pane fade active show" id="penableZoom1"><p>Enable WebView zoom. Use &lsquo;enable_screen_zoom&rsquo; parameter in rhoconfig.txt to configure this value.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="penableZoom2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penableZoom5"></div><div class="tab-pane fade" id="penableZoom6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.enableZoom</code></li></ul></li></ul></div></div></div>  </div><a name='pfontFamily'></a><div class=' method  js ruby' id='pfontFamily'><div class="signature d-flex"><div class="name">fontFamily</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pfontFamily1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#pfontFamily6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-fontFamily'><div class="tab-pane fade active show" id="pfontFamily1"><p>Specifies the default font to use when rendering text in web pages. The specified font should be a TrueType font present on the device. On Windows the default font has been set to &lsquo;Tahoma&rsquo; as this is present on all Symbol WM / CE devices, note that Tahoma has no italic or oblique variants. On the Enterprise Tablet the default is Droid Sans Fallback. The font specified must be stored in \Windows for Windows WM / CE devices, or /system/fonts for Enterprise Tablet. Defines in config.xml: HTMLStyles\FontFamily</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pfontFamily2"></div><div class="tab-pane fade" id="pfontFamily5"></div><div class="tab-pane fade" id="pfontFamily6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.fontFamily</code></li></ul></li></ul></div></div></div>  </div><a name='pframework'></a><div class=' method  js ruby android ios wp8' id='pframework'><div class="signature d-flex"><div class="name">framework</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pframework1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#pframework6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-framework'><div class="tab-pane fade active show" id="pframework1"><p>Same as System.webViewFramework.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pframework2"></div><div class="tab-pane fade" id="pframework5"></div><div class="tab-pane fade" id="pframework6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.framework</code></li></ul></li></ul></div></div></div>  </div><a name='pfullScreen'></a><div class=' method  js ruby android' id='pfullScreen'><div class="signature d-flex"><div class="name">fullScreen</div><div class='return-values'> : <span class='text-info'>BOOLEAN</span>  </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pfullScreen1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#pfullScreen2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#pfullScreen6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-fullScreen'><div class="tab-pane fade active show" id="pfullScreen1"><p>Use full screen mode.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pfullScreen2"><p><strong>Default:</strong> false</p></div><div class="tab-pane fade" id="pfullScreen5"></div><div class="tab-pane fade" id="pfullScreen6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.fullScreen</code></li></ul></li></ul></div></div></div>  </div><a name='pnavigationTimeout'></a><div class=' method  js ruby' id='pnavigationTimeout'><div class="signature d-flex"><div class="name">navigationTimeout</div><div class='return-values'> : <span class='text-info'>INTEGER</span>  </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pnavigationTimeout1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#pnavigationTimeout2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#pnavigationTimeout6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-navigationTimeout'><div class="tab-pane fade active show" id="pnavigationTimeout1"><p>Can be defined in config.xml: Navigation\NavTimeout. Number of milliseconds(maximum is 45000) before the browser times out and navigates to the page specified in the badlink setting. If it is determined that the destination is unreachable regardless of wait time, the badlink may be loaded before NAVTIMEOUT. This is the time taken to establish communication with the server, not the time taken to fully load the page.Note that the navigation timeout will not be invoked when navigating to the start page, best practice is to store your first page locally to avoid connectivity issues at start up, you can then redirect to an online page if desired.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pnavigationTimeout2"><p><strong>Default:</strong> 45000</p></div><div class="tab-pane fade" id="pnavigationTimeout5"></div><div class="tab-pane fade" id="pnavigationTimeout6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.navigationTimeout</code></li></ul></li></ul></div></div></div>  </div><a name='pscrollTechnique'></a><div class=' method  js ruby' id='pscrollTechnique'><div class="signature d-flex"><div class="name">scrollTechnique</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pscrollTechnique1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#pscrollTechnique2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#pscrollTechnique5" data-toggle="tab">Values</a></li><li class='nav-item'><a class="nav-link" href="#pscrollTechnique6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-scrollTechnique'><div class="tab-pane fade active show" id="pscrollTechnique1"><p>Specifies the technique used to scroll about the page.Defines in config.xml: Scrolling\ScrollTechnique.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pscrollTechnique2"><p><strong>Default:</strong> FingerScroll</p></div><div class="tab-pane fade" id="pscrollTechnique5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.WebView.SCROLL_NONE (For Ruby use "::" for all "." when referencing constants)<br/> String: None </dt><dd><p>No scrollbars will be displayed and the page will not respond to finger swipes.</p>
</dt><dt>Constant: Rho.WebView.SCROLL_SCROLLBARS (For Ruby use "::" for all "." when referencing constants)<br/> String: Scrollbars </dt><dd><p>When the size of the page is larger than the screen scrollbars will be presented which can be used to scroll the page.</p>
</dt><dt>Constant: Rho.WebView.SCROLL_FINGER (For Ruby use "::" for all "." when referencing constants)<br/> String: FingerScroll </dt><dd><p>You can scroll around the page using finger swiping.</p>
</dt></dl></div><div class="tab-pane fade" id="pscrollTechnique6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.scrollTechnique</code></li></ul></li></ul></div></div></div>  </div><a name='ptextZoomLevel'></a><div class=' method  js ruby android' id='ptextZoomLevel'><div class="signature d-flex"><div class="name">textZoomLevel</div><div class='return-values'> : <span class='text-info'>INTEGER</span>  </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#ptextZoomLevel1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#ptextZoomLevel6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-textZoomLevel'><div class="tab-pane fade active show" id="ptextZoomLevel1"><p>Sets the font size to be displayed on the page, set to 0 for the smallest font and 4 for the largest font.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ptextZoomLevel2"></div><div class="tab-pane fade" id="ptextZoomLevel5"></div><div class="tab-pane fade" id="ptextZoomLevel6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.textZoomLevel</code></li></ul></li></ul></div></div></div>  </div><a name='puserAgent'></a><div class=' method  js ruby' id='puserAgent'><div class="signature d-flex"><div class="name">userAgent</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#puserAgent1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#puserAgent6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-userAgent'><div class="tab-pane fade active show" id="puserAgent1"><p>Defines in config.xml: Navigation\UserAgent. When visiting a web server the WebKit browser will report its self as the specified user agent. Use the following substitution variables:</p>

<ul>
<li>%p &ndash; platform name (&ldquo;Windows CE &rdquo; + version number)</li>
<li>%w &ndash; WebKit version number</li>
<li>%e &ndash; WebKit version number.</li>
</ul>


<p>Use the UserAgent setting to spoof your device to the server, e.g. to view content designed for the desktop on your mobile screen.
From RhoElements 2.1 onwards the default value was changed to work out of the box with a greater number of server configurations, prior to RhoElements 2.1 the default user agent was: &ldquo;Mozilla/5.0 (%p) AppleWebKit/%w (KHTML, like Gecko) WebKit/%e Safari/%w&rdquo;</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="puserAgent2"></div><div class="tab-pane fade" id="puserAgent5"></div><div class="tab-pane fade" id="puserAgent6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.userAgent</code></li></ul></li></ul></div></div></div>  </div><a name='pviewportEnabled'></a><div class=' method  js ruby' id='pviewportEnabled'><div class="signature d-flex"><div class="name">viewportEnabled</div><div class='return-values'> : <span class='text-info'>BOOLEAN</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pviewportEnabled1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#pviewportEnabled2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#pviewportEnabled6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-viewportEnabled'><div class="tab-pane fade active show" id="pviewportEnabled1"><p>Whether to enable or disable viewport meta tag processing.Defines in config.xml: Navigation\ViewportEnabled.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pviewportEnabled2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="pviewportEnabled5"></div><div class="tab-pane fade" id="pviewportEnabled6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.viewportEnabled</code></li></ul></li></ul></div></div></div>  </div><a name='pviewportWidth'></a><div class=' method  js ruby' id='pviewportWidth'><div class="signature d-flex"><div class="name">viewportWidth</div><div class='return-values'> : <span class='text-info'>INTEGER</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pviewportWidth1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#pviewportWidth6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-viewportWidth'><div class="tab-pane fade active show" id="pviewportWidth1"><p>Default viewport width to use for pages that do not have a viewport meta tag (uses 1:1 scaling if not specified).Defines in config.xml: Navigation\ViewportWidth.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pviewportWidth2"></div><div class="tab-pane fade" id="pviewportWidth5"></div><div class="tab-pane fade" id="pviewportWidth6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.viewportWidth</code></li></ul></li></ul></div></div></div>  </div><a name='pzoomPage'></a><div class=' method  js ruby android' id='pzoomPage'><div class="signature d-flex"><div class="name">zoomPage</div><div class='return-values'> : <span class='text-info'>FLOAT</span>  </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#pzoomPage1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#pzoomPage6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-zoomPage'><div class="tab-pane fade active show" id="pzoomPage1"><p>Sets the zoom factor of the page. Factor 1.0 is no zoom, values less than 1.0 are zoomed out and values greater than 1.0 are zoomed in.It is recommended to not to use the zoom value less than 1.0 because the page doesn&rsquo;t look in readable format.In Android new Zoom value takes effect on current page, Previous page has to be revisited for the new zoom values to take effect</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pzoomPage2"></div><div class="tab-pane fade" id="pzoomPage5"></div><div class="tab-pane fade" id="pzoomPage6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.zoomPage</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Execute javascript</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>You can call the WebView and make it execute JavaScript code from a Ruby controller. This can be particularly helpful in order to reuse JavaScript functionality that is already included in your pages.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

#call javascript alert on the current page
Rho::WebView.executeJavascript("alert('This is Webview.executejavascript function');")

                            </code></pre></div></div>
<p>As an example, you can invoke JQuery Mobile&rsquo;s changePage.</p>
<ul class='nav nav-tabs' id='exI0-S1Tab'><li class="nav-item"><a class="nav-link active" href='#exI0-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI0-S1RUBY'><pre class='CodeRay'><code>:::ruby

#call JQuery Mobile from a Ruby controller
Rho::WebView.executeJavascript("$.mobile.changePage('#my_page');")

                            </code></pre></div></div>
<p>You can also call your own functions.</p>
<ul class='nav nav-tabs' id='exI0-S2Tab'><li class="nav-item"><a class="nav-link active" href='#exI0-S2JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI0-S2JS'><pre class='CodeRay'><code>:::javascript

function greet(name) {
    alert("Hello, "+name);
}

                            </code></pre></div></div>
<p>From the Ruby controller we can execute the JavaScript function that may be in the view.</p>
<ul class='nav nav-tabs' id='exI0-S3Tab'><li class="nav-item"><a class="nav-link active" href='#exI0-S3RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI0-S3RUBY'><pre class='CodeRay'><code>:::ruby

#call a custom JavaScript function from Ruby
Rho::WebView.executeJavascript("greet('John Doe');")

                            </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Use full-screen mode</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>The WebView can be set to use all the available screen real-estate by turning on &ldquo;full-screen&rdquo; mode.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

# Toggle fullScreen on / off
Rho::WebView.fullScreen = !Rho::WebView.fullScreen

                            </code></pre></div></div>
<p>This property can also be assigned to in JavaScript.</p>
<ul class='nav nav-tabs' id='exI1-S1Tab'><li class="nav-item"><a class="nav-link active" href='#exI1-S1JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI1-S1JS'><pre class='CodeRay'><code>:::javascript

// Fullscreen can also be invoked from JavaScript
Rho.WebView.fullScreen = true;

Rho.WebView.fullScreen = false;

                            </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Navigate</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>This is the section that will appear before the code block.</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

#Force WebView to navigate to a URL.
Rho::WebView.navigate(url_for(:action =&gt; :my_action))

                            </code></pre></div></div>
<p>You can also navigate outside of your application, to an external site.</p>
<ul class='nav nav-tabs' id='exI2-S1Tab'><li class="nav-item"><a class="nav-link active" href='#exI2-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI2-S1RUBY'><pre class='CodeRay'><code>:::ruby

#Navigate out of the local application and into an externally-served site
Rho::WebView.navigate("http://www.example.com");

                            </code></pre></div></div>
<p>This API is also available from JavaScript.</p>
<ul class='nav nav-tabs' id='exI2-S2Tab'><li class="nav-item"><a class="nav-link active" href='#exI2-S2JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI2-S2JS'><pre class='CodeRay'><code>:::javascript

//Navigate out of the local application and into an externally-served site
Rho.WebView.navigate("http://www.example.com");

                            </code></pre></div></div>  </div></div></div></div><a name='e3'></a><div class=' example' id='e3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample3"><strong>Navigate back</strong></div><div id="cExample3" class="accordion-body">  <div class="accordion-inner">
<p>This is the section that will appear before the code block.</p>
<ul class='nav nav-tabs' id='exI3-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI3-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI3-S0RUBY'><pre class='CodeRay'><code>:::ruby

#Force WebView to navigate to the previous page using Browser back.
Rho::WebView.navigateBack

                            </code></pre></div></div>
<p>The same method is available in JavaScript.</p>
<ul class='nav nav-tabs' id='exI3-S1Tab'><li class="nav-item"><a class="nav-link active" href='#exI3-S1JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI3-S1JS'><pre class='CodeRay'><code>:::javascript

//Force WebView to navigate to the previous page using Browser back.
Rho.WebView.navigateBack();

                            </code></pre></div></div>  </div></div></div></div><a name='e4'></a><div class=' example' id='e4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample4"><strong>Refresh the page</strong></div><div id="cExample4" class="accordion-body">  <div class="accordion-inner">
<p>Reload the current URL into the WebView. This is useful especially after having updated data that must be now shown to the user</p>
<ul class='nav nav-tabs' id='exI4-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI4-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI4-S0RUBY'><pre class='CodeRay'><code>:::ruby

# Update database or variables here
# ...
# Refresh the current page to show new information
Rho::WebView.refresh

                            </code></pre></div></div>
<p>By default, &ldquo;refresh&rdquo; will update the current view. If you are using the native Tabbar and have multiple WebViews, you can specify which one to refresh.</p>
<ul class='nav nav-tabs' id='exI4-S1Tab'><li class="nav-item"><a class="nav-link active" href='#exI4-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI4-S1RUBY'><pre class='CodeRay'><code>:::ruby

# Reload the page on WebView number 2
Rho::WebView.refresh(2)

                            </code></pre></div></div>
<p>Also available from JavaScript.</p>
<ul class='nav nav-tabs' id='exI4-S2Tab'><li class="nav-item"><a class="nav-link active" href='#exI4-S2JS' data-toggle='tab'>JavaScript</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI4-S2JS'><pre class='CodeRay'><code>:::javascript

// Reload the current page
Rho.WebView.refresh()

// Reload the page on WebView number 3
Rho.WebView.refresh(3)

                            </code></pre></div></div>  </div></div></div></div></div>